--- a/Style/responsivo.css
+++ b/Style/responsivo.css
@@ -4,3 +4,49 @@
     }
 
 }
+
+@media(max-width: 980px) {
+    html {
+        font-size: 80%;
+    }
+
+    #about .first_section {
+        display: block;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    #about .itens_left {
+        margin: 4rem 8rem;
+        justify-content: center;
+    }
+
+    #about .cards, .card {
+        flex-direction: column;
+    }
+
+    #about .plus {
+        margin: 2rem;
+    }
+
+    #about .card p {
+        font-size: 1.5rem;
+        text-align: center;
+        height: 18rem;
+    }
+
+    #services .img_services {
+        display: none;
+    }
+
+    #services .img_services_toggle {
+        display: inherit;
+        text-align: center;
+    }
+
+    #services .img_services_toggle img {
+        border-radius: 1rem;
+    }
+
+}
