--- a/Style/style.css
+++ b/Style/style.css
@@ -179,7 +179,7 @@ header nav ul li a {
 
 #about .img_about {
     height: auto;
-    margin: 1rem;
+    order: -;margin: 1rem;
     width: 25rem;
 
     box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
@@ -188,6 +188,7 @@ header nav ul li a {
 
 #about .cards {
     margin-top: 4rem;
+    align-items: center;
 }
 
 #about .card {
@@ -214,10 +215,7 @@ header nav ul li a {
 }
 
 #about .plus {
-    position: relative;
     height: 4rem;
-    justify-content: center;
-    top: 10rem;
 }
 
 #services .container {
@@ -281,18 +279,22 @@ header nav ul li a {
     justify-content: right;  
 }
 
+#services .img_services_toggle {
+    display: none;
+}
+
 #testimonials .container {
     width: 90%;
     height: auto;
     max-width: 90rem;
-
-    background-color: rgba(88, 203, 211, 0.466);
 
     margin: auto;
     margin-bottom: 2rem;
     padding: 2rem;
     border-radius: 1rem;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+
+    background-color: rgba(88, 203, 211, 0.466);
 }
 
 #testimonials h1 {
@@ -302,9 +304,12 @@ header nav ul li a {
 }
 
 #testimonials .partners {
-    background-color: rgba(88, 203, 211, 0.466);
-    height: 200px;
+    display: flex;
     text-align: center;
+    height: 200px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(88, 203, 211, 0.466);
 }
 
 #testimonials .logo {
