--- a/Style/responsivo.css
+++ b/Style/responsivo.css
@@ -1,13 +1,29 @@
+@media(max-width: 1400px) {
+    #home .btn {
+        margin: 12rem 4rem 0 0 ;
+        padding: 0.80rem 1.80rem;
+    }
+}
+
 @media(max-width: 1180px) {
     html {
         font-size: 90%;
+    }
+
+    #home .btn {
+        margin: 8rem 4rem 0 0;
+        padding: 0.60rem 1.60rem;
+    }
+
+    #home .h1_btn {
+        font-size: 50%;
     }
 
 }
 
 @media(max-width: 980px) {
     html {
-        font-size: 80%;
+        font-size: 70%;
     }
 
     #about .first_section {
@@ -15,10 +31,12 @@
         align-items: center;
         justify-content: center;
         text-align: center;
+        align-items: center;
     }
 
     #about .itens_left {
-        margin: 4rem 8rem;
+        margin: 2rem auto;
+        text-align: justify;
         justify-content: center;
     }
 
@@ -30,10 +48,18 @@
         margin: 2rem;
     }
 
+    #about .card {
+        width: auto;
+        height: auto;
+    }
+
+    #about .card h2 {
+        margin-bottom: 2rem;
+    }
+
     #about .card p {
         font-size: 1.5rem;
         text-align: center;
-        height: 18rem;
     }
 
     #services .img_services {
@@ -47,6 +73,133 @@
 
     #services .img_services_toggle img {
         border-radius: 1rem;
+        width: 45%;
     }
 
+    #testimonials .logo {
+        width: 15%;
+        height: auto;
+    }
+
+}
+
+@media(max-width: 700px) {
+    html {
+        font-size: 65%;
+    }
+
+    #home .btn {
+        margin: 5rem 4rem 0 0 ;
+        padding: 0.60rem 1.60rem;
+    }
+
+    #home .dubai {
+        font-size: 3rem;
+    }
+
+    #home .h1_btn {
+        font-size: 50%;
+    }
+
+}
+
+@media(max-width: 582px) {
+    html {
+        font-size: 55%;
+    }
+
+    #home .img_about {
+        justify-content: initial;
+    }
+
+    header .container {
+        height: 60px;
+    }
+
+    header nav {
+        display: none;
+    }
+
+    header .menu_toggle {
+        width: 40px;
+        height: 30px;
+        margin-right: 20px;
+    }
+
+    header .one, .two, .three {
+        border: solid black;
+        margin: 2px auto;
+        width: 4rem;
+
+        transition-duration: 0.3s;
+    }
+
+    /*FullScreen Toggle*/
+
+     header .menu_section.on {
+        position: absolute;
+        top: 0;
+        left: 0;
+        
+        width: 100vw;
+        height: 100vh;
+
+        background-color: rgb(111, 214, 214);
+
+        z-index: 10;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    overflow: h;}
+
+    header .menu_section.on nav {
+        display: block;
+    }
+
+    header .menu_section.on .menu_toggle {
+        position: absolute;
+        right: 30px;
+        top: 12px;
+    }
+
+    header .menu_section.on .menu_toggle .one {
+        transform: rotate(45deg) translate(7px, 7px);
+    }
+
+    header .menu_section.on .menu_toggle .two {
+        opacity: 0;
+    }
+
+    header .menu_section.on .menu_toggle .three {
+        transform: rotate(-45deg) translate(5px, -4px);
+    }
+
+    header .menu_section.on nav ul {
+        display: block;
+        text-align: center;
+    }
+
+    header .menu_section.on nav ul a {
+        display: block;
+        transition-duration: 0.5s;
+        font-size: 3rem;
+        line-height: 4rem;
+    }
+}
+
+@media (max-width: 350px) {
+    html {
+        font-size: 45%;
+    }
+
+    #testimonials .partners {
+        display: block;
+    }
+}
+
+@media (max-width: 320px) {
+    html {
+        font-size: 35%;
+    }
 }
