--- a/Style/responsivo.css
+++ b/Style/responsivo.css
@@ -85,11 +85,15 @@
 
     #services .img_services_toggle img {
         border-radius: 1rem;
-        width: 45%;
+        width: 80%;
     }
 
     #testimonials .partners {
         flex-direction: column;
+    }
+
+    #testimonials .partners img {
+        width: 50%;
     }
 
     #testimonials .logo {
@@ -166,7 +170,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-    overflow: h;}
+    }
 
     header .menu_section.on nav {
         display: block;
@@ -174,8 +178,8 @@
 
     header .menu_section.on .menu_toggle {
         position: absolute;
-        right: 30px;
-        top: 12px;
+        right: 25px;
+        top: 14px;
     }
 
     header .menu_section.on .menu_toggle .one {
@@ -201,7 +205,6 @@
         font-size: 3rem;
         line-height: 4rem;
     }
-
 }
 
 @media (max-width: 350px) {
